# AMPF

./: .gitignore  README  build.xml
GRDF/: .project  AUTHORS  Makefile.am  NOTICE  README  autogen.sh  build-all.sh  build-components.sh  build.xml  clean-all.sh  configure.ac  grdf-uninstalled.pc.in  grdf.pc.in  grdf.spec.in
GRDF/doc/: intro.txt  structure.txt
GRDF/src/: Makefile.am  Makefile.in  grdf-graph.c  grdf-graph.h  grdf-node-anon.c  grdf-node-anon.h  grdf-node-literal.c  grdf-node-literal.h  grdf-node-uri.c  grdf-node-uri.h  grdf-node-variable.c  grdf-node-variable.h  grdf-node.c  grdf-node.h  grdf-ontology.c  grdf-ontology.h  grdf-query.c  grdf-query.h  grdf-stmt.c  grdf-stmt.h  grdf-template.c  grdf-template.h  grdf-world.c  grdf-world.h  grdf.c  grdf.h  template.sh
GRDF/test/: Makefile.am  basic.c  gobject.supp  lt-valgrind  test-equal.c  test-equal.xml  test-memory.c  test1.c  valtest.c
MPF/: AUTHORS  (+14 more)
MPF/MySTT/mpf-mystt-spnsp-gmm/: Makefile.am  Makefile.cmdline  README.icsi  autogen.sh  configure.ac  global.cpp  global.h  gmm.cpp  gmm.h  gmmbridge.cpp  gmmbridge.h  mpf-mystt-spnsp-gmm.c  mpf-mystt-spnsp-gmm.spec.in  mpf-mystt-spnsp-gmm_test.c  nonspeech.gmm  speech.gmm
MPF/MySTT/mpf-mystt-spnsp-gmm/tests/: simpletest
MPF/components/mpf-loi-seg/: Makefile.am  autogen.sh  configure.ac  mpf-loi-seg.c  mpf-loi-seg.spec.in
MPF/components/mpf-loi-seg/tests/: test-1  test-2
MPF/components/mpf-loi-smooth/: Makefile.am  autogen.sh  configure.ac  mpf-loi-smooth.c  mpf-loi-smooth.spec.in
MPF/components/mpf-loi-smooth/tests/: test-1  test-2
MPF/components/mpf-rdf-mux/: LICENSE_LGPLv2.1  Makefile.am  autogen.sh  configure.ac  mpf-rdf-mux.c  mpf-rdf-mux.spec.in
MPF/components/mpf-rdf-mux/tests/: test-1  test-2
MPF/components/mpf-segmenter/: AUTHORS  Makefile.am  autogen.sh  configure.ac  mpf-segmenter.c  mpf-segmenter.spec.in
MPF/components/mpf-segmenter/tests/: audio-extract-src  audio-video  audio-video-recode  audio-video-segments  multi-segments  red-baron  simpletest  storyboard-kids  storyboard-muletrain  storyboard-src  strip-audio  test-1  the-proposal  valgrind-test  video-segments  video-segments-play  video-segments-silent
MPF/components/mpf-shift/: Makefile.am  autogen.sh  configure.ac  mpf-shift.c  mpf-shift.spec.in
MPF/components/mpf-shift/tests/: test-1  test-2  test-3
MPF/components/mpf-xml-pipeline-dump/: Makefile.am  autogen.sh  configure.ac  mpf-xml-pipeline-dump.c  mpf-xml-pipeline-dump.spec.in
MPF/components/mpf-xml-pipeline-dump/tests/: simpletest
MPF/data-types/mpf-iplimage/: Makefile.am  autogen.sh  configure.ac  mpf-iplimage-uninstalled.pc.in  mpf-iplimage.pc.in  mpf-iplimage.spec.in  test.sh
MPF/data-types/mpf-iplimage/components/: Makefile.am  fromiplimage.c  fromiplimage.h  toiplimage.c  toiplimage.h
MPF/data-types/mpf-iplimage/mpf/: Makefile.am  mpf-iplimage.c  mpf-iplimage.h
MPF/data-types/mpf-opencv/: Makefile.am  autogen.sh  configure.ac  mpf-opencv.pc.in  mpf-opencv.spec.in
MPF/data-types/mpf-opencv/m4/: Makefile  Makefile.in
MPF/data-types/mpf-opencv/mpf/: Makefile.am  alternating.c  cvcanny.c  cvcvtcolor.c  cvhaar.c  cvsmooth.c  cvsobel.c  cvtcolor-test.c  dbgtest.sh  gstiplimage.c  gstiplimage.h  haartest.py  iplidentity.c  iplsink.c  mpf-iplimage.c  mpf-iplimage.h  mpf-objlist.c  mpf-objlist.h  mpf-scenedata.c  objcorrelate.c  objmarkup.c  runenv  test-haar.sh  test-identity-1.sh  test-identity-2.sh  test-sink.sh  test.sh  valtest.sh
MPF/data-types/mpf-opencv/notes/: buffer-lifetime
MPF/data-types/mpf-pocketsphinx/: Makefile.am  autogen.sh  configure.ac  mpf-pocketsphinx-uninstalled.pc.in  mpf-pocketsphinx.pc.in  mpf-pocketsphinx.spec.in
MPF/data-types/mpf-pocketsphinx/m4/: Makefile  Makefile.in
MPF/data-types/mpf-pocketsphinx/mpf/: Makefile.am  gstvader.h  mpf-iplimage.c  mpf-iplimage.h  mpf-utterance.c  mpf-utterance.h  mpfpocketsphinx.c  mpfpocketsphinx.h  psmarshal.c  psmarshal.h  test.sh  utterance-dump.c  utterance-filter.c
MPF/data-types/mpf-rdf/: Makefile.am  autogen.sh  configure.ac  mpf-rdf-uninstalled.pc.in  mpf-rdf.pc.in  mpf-rdf.spec.in
MPF/data-types/mpf-rdf/components/: Makefile.am  mpf-rdf-ton3.c
MPF/data-types/mpf-rdf/mpf/: Makefile.am  mpf-rdf.c  mpf-rdf.h
MPF/mpf-core/: COPYING  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  mpf-core-uninstalled.pc.in  mpf-core.doxyfile  mpf-core.pc.in  mpf-core.spec.in
MPF/mpf-core/docs/: Makefile.am
MPF/mpf-core/docs/mpf-core/: Makefile.am  mpf-core-docs.sgml  mpf-core-sections.txt  mpf-core.types
MPF/mpf-core/m4/: Makefile.am
MPF/mpf-core/mpf/: Makefile.am  mpf-component-magicfuncs.h  mpf-component.c  mpf-component.h  mpf-componenttemplate.h  mpf-compound-buffer.c  mpf-compound-buffer.h  mpf-logging.c  mpf-logging.h  mpf-rawvideo.c  mpf-rawvideo.h  mpf-voidstar.c  mpf-voidstar.h
MPF/mpf-core/test/: Makefile.am  params1.c  test0.sh  test1.sh  voidstar-sink.c  voidstar-src.c
MPF/mpf-core/tools/: Makefile.am  mpf-build-component.sh
MPF/prototypes/mpf-gst-modified/: Makefile.am  autogen.sh  configure.ac  mpf-gst-modified.spec.in  mpf-multifile.c  mpf-multifilesink.c  mpf-multifilesink.h
MPF/prototypes/mpf-gst-modified/tests/: simpletest
MPF/prototypes/mpf-opencv-opticalflow/: Makefile.am  README  autogen.sh  configure.ac  mpf-opencv-opticalflow.c  mpf-opencv-opticalflow.spec.in
MPF/prototypes/mpf-rdftest/: Makefile.am
MPF/prototypes/mpf-vid-bal/: Makefile.am  autogen.sh  component-autotools.spec.in  configure.ac  mpf-vid-bal.c  mpf-vid-bal.spec.in
MPF/tests/jira-mpf-213-split/: Makefile.am  autogen.sh  configure.ac  jira-mpf-213-split.c  jira-mpf-213-split.spec.in
MPF/tests/jira-mpf-218/: Makefile.am  autogen.sh  configure.ac  jira-mpf-218.c  jira-mpf-218.spec.in
MPF/tests/mpf-mux/: Makefile.am  autogen.sh  configure.ac  mpf-mux.c  mpf-mux.spec.in
MPF/tests/mpf-test-pipe/: Makefile.am  autogen.sh  configure.ac  mpf-test-pipe.c  mpf-test-pipe.spec.in  test-1-pipe.c  test-2-pipe.c  test-pipe  test-pipe-2
MPF/tools/mpf-template/: Makefile.am  README  autogen.sh  configure.ac  mpf-template.spec.in
(+306 files in other folders)
