AC_INIT

dnl versions of gstreamer and plugins-base
GST_MAJORMINOR=0.10
GST_REQUIRED=0.10.0
MPF_CORE_REQUIRED=0.0.2

dnl fill in your package name and version here
dnl the fourth (nano) number should be 0 for a release, 1 for CVS,
dnl and 2... for a prerelease

dnl when going to/from release please set the nano correctly !
dnl releases only do Wall, cvs and prerelease does Werror too
AS_VERSION(mpf-pocketsphinx, MPF_POCKETSPHINX_VERSION, 0, 0, 4, 0,
    GST_PLUGIN_CVS="no", GST_PLUGIN_CVS="yes")

dnl AM_MAINTAINER_MODE provides the option to enable maintainer mode
AM_MAINTAINER_MODE

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl make aclocal work in maintainer mode
AC_SUBST(ACLOCAL_AMFLAGS, "-I m4")

AM_CONFIG_HEADER(config.h)

dnl check for tools
AC_PROG_CC
AC_PROG_LIBTOOL


dnl decide on error flags
AS_COMPILER_FLAG(-Wall, GST_WALL="yes", GST_WALL="no")
                                                                                
if test "x$GST_WALL" = "xyes"; then
#   GST_ERROR="$GST_ERROR -Wall"

   if test "x$GST_PLUGIN_CVS" = "xno"; then
     AS_COMPILER_FLAG(-Werror,GST_ERROR="$GST_ERROR -Werror",GST_ERROR="$GST_ERROR")
   fi
fi

dnl Check for pkgconfig first
AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, yes, no)

dnl Give error and exit if we don't have pkgconfig
if test "x$HAVE_PKGCONFIG" = "xno"; then
  AC_MSG_ERROR(you need to have pkgconfig installed !)
fi

dnl Now we're ready to ask for gstreamer libs and cflags
dnl And we can also ask for the right version of gstreamer


export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:`pwd`/../mpf-core

PKG_CHECK_MODULES(GST, \
  gstreamer-$GST_MAJORMINOR >= $GST_REQUIRED,
  HAVE_GST=yes,HAVE_GST=no)

dnl Give error and exit if we don't have gstreamer
if test "x$HAVE_GST" = "xno"; then
  AC_MSG_ERROR(you need gstreamer development packages installed !)
fi

dnl append GST_ERROR cflags to GST_CFLAGS
GST_CFLAGS="$GST_CFLAGS $GST_ERROR"

dnl make GST_CFLAGS and GST_LIBS available
AC_SUBST(GST_CFLAGS)
AC_SUBST(GST_LIBS)

dnl make GST_MAJORMINOR available in Makefile.am
AC_SUBST(GST_MAJORMINOR)




export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:`pwd`/../mpf-core
PKG_CHECK_MODULES(MPF_CORE,
                  mpf-core,
                  HAVE_MPF_CORE=yes, HAVE_MPF_CORE=no)

dnl Give a warning if we don't have MPF core
dnl you can turn this into an error if you need them
if test "x$HAVE_MPF_CORE" = "xno"; then
  AC_MSG_ERROR(no MPF Core libraries found (mpf-core))
fi


dnl make _CFLAGS and _LIBS available
AC_SUBST(MPF_CORE_CFLAGS)
AC_SUBST(MPF_CORE_LIBS)



dnl Pull in SphinxBase
PKG_CHECK_MODULES(SPHINXBASE, sphinxbase, HAVE_SPHINXBASE=yes, HAVE_SPHINXBASE=no)

dnl Give error and exit if we don't have SphinxBase
if test "x$HAVE_SPHINXBASE" = "xno"; then
  AC_MSG_ERROR(you need SphinxBase development packages installed !)
fi

dnl make _CFLAGS and _LIBS available
AC_SUBST(SPHINXBASE_CFLAGS)
AC_SUBST(SPHINXBASE_LIBS)


dnl Pull in PocketSphinx
PKG_CHECK_MODULES(POCKETSPHINX, pocketsphinx, HAVE_POCKETSPHINX=yes, HAVE_POCKETSPHINX=no)

dnl Give error and exit if we don't have PocketSphinx
if test "x$HAVE_POCKETSPHINX" = "xno"; then
  AC_MSG_ERROR(you need PocketSphinx development packages installed !)
fi

POCKETSPHINX_MODELDIR=`pkg-config --variable=modeldir pocketsphinx`

dnl make _CFLAGS and _LIBS available
AC_SUBST(POCKETSPHINX_CFLAGS)
AC_SUBST(POCKETSPHINX_LIBS)
AC_SUBST(POCKETSPHINX_MODELDIR)



dnl set the plugindir where plugins should be installed
if test "x${prefix}" = "x$HOME"; then
  plugindir="$HOME/.gstreamer-$GST_MAJORMINOR/plugins"
else
  plugindir="\$(libdir)/gstreamer-$GST_MAJORMINOR"
fi
AC_SUBST(plugindir)


dnl set proper LDFLAGS etc for plugins
GST_PLUGIN_LDFLAGS='-module -avoid-version -export-symbols-regex [_]*\(gst_\|Gst\|GST_\).*'
AC_SUBST(GST_PLUGIN_LDFLAGS)


AC_OUTPUT([
  Makefile
  mpf-pocketsphinx.spec
  mpf-pocketsphinx.pc
  mpf-pocketsphinx-uninstalled.pc
  mpf/Makefile
])

