plugin_LTLIBRARIES = libjira-mpf-218.la

libjira_mpf_218_la_SOURCES = jira-mpf-218.c

svnclean:
	make distclean
	rm -rf configure Makefile.in depcomp config.guess \
	    ltmain.sh config.sub config.h.in autom4te.cache \
	    missing aclocal.m4 install-sh INSTALL \
	    $(PACKAGE)-[.0-9]* $(PACKAGE)-[.0-9]*.tar*
