lib_LTLIBRARIES = libmpf-iplimage.la

libmpf_iplimage_la_SOURCES = mpf-iplimage.c
libmpf_iplimage_la_CFLAGS = $(GST_CFLAGS) $(MPF_CORE_CFLAGS) $(OPENCV_CFLAGS)
libmpf_iplimage_la_LIBADD = $(GST_LIBS) $(MPF_CORE_LIBS) $(OPENCV_LIBS)

libmpf_iplimageincludedir = $(includedir)/mpf
libmpf_iplimageinclude_HEADERS = mpf-iplimage.h
